@@ -24,10 +24,11 @@ importFrom(XML, xmlEventParse)
 export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        combine.rwl, corr.rwl.seg, corr.series.seg, crn.plot, detrend,
        detrend.series, ffcsaps, gini.coef, glk, hanning, i.detrend,
-       i.detrend.series, morlet, po.to.wc, powt, rcs, read.compact,
-       read.crn, read.fh, read.ids, read.rwl, read.tridas,
-       read.tucson, rwi.stats, rwi.stats.legacy, rwi.stats.running,
-       rwl.stats, sea, seg.plot, sens1, sens2, series.rwl.plot,
-       skel.plot, spag.plot, strip.rwl, tbrm, tridas.vocabulary,
-       uuid.gen, wavelet.plot, wc.to.po, write.compact, write.crn,
-       write.rwl, write.tridas, write.tucson)
+       i.detrend.series, morlet, po.to.wc, pointer, powt, rcs,
+       read.compact, read.crn, read.fh, read.ids, read.rwl,
+       read.tridas, read.tucson, rwi.stats, rwi.stats.legacy,
+       rwi.stats.running, rwl.stats, sea, seg.plot, sens1, sens2,
+       series.rwl.plot, skel.plot, spag.plot, strip.rwl, tbrm,
+       tridas.vocabulary, uuid.gen, wavelet.plot, wc.to.po,
+       write.compact, write.crn, write.rwl, write.tridas,
+       write.tucson)
