@@ -25,6 +25,13 @@ File: corr.rwl.seg.R
 - stops with a clear error message if 'rwl' has too few rows for the given
   'seg.length' and 'bin.floor' combination
 
+File: pointer.R
+---------------
+
+- New function pointer() calculates pointer years from a group of
+  ring-width series.  Written by Pierre Mérian, adapted for dplR and
+  improved by Andy Bunn and Mikko Korpela.
+
 File: rcs.R
 -----------
 
